@@ -1,3 +1,3 @@
 EXTRA_DIST = autogen.sh ChangeLog.1 Doxyfile gama.dox
 
-SUBDIRS = lib bin doc scripts xml
+SUBDIRS = lib bin doc scripts xml tests
