@@ -1,0 +1,17 @@
+#!/bin/sh
+
+if [ ! -d results ]; then
+    mkdir results
+fi;
+
+for g in @INPUT_FILES@
+do
+for a in svd gso cholesky envelope
+do
+    echo  @PACKAGE_VERSION@ $g $a
+    @top_builddir@/bin/gama-local input/$g.gkf \
+	--text results/@PACKAGE_VERSION@-$g-$a.txt \
+	--xml  results/@PACKAGE_VERSION@-$g-$a.xml \
+	--svg  results/@PACKAGE_VERSION@-$g-$a.svg
+done
+done
