@@ -1,3 +1,7 @@
+
+* added basic test suite for gama-local (make check)
+
+
 Changes from 1.9.00 to 1.9.01
 -----------------------------
 
